--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -104,6 +105,113 @@
                 </div>
             </div>
         </section>
+
+        <section class="section projects">
+            <div class="container">
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Последние проекты</h2>
+
+
+                <div class="swiper-container projects-slider wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide projects-slide">
+                            <img class="project-image" src="img/project/Castle.jpg" alt="Сайт замков Беларуси">
+                            <div class="project-text">
+                                <h2 class="project-title">Сайт замков Беларуси</h2>
+                                <div class="progect-time">
+                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Сроки</h4>
+                                        <p class="project-paragraph">4 рабочих дня</p>
+                                    </div>
+                                </div>
+                                <div class="project-cost">
+                                    <img class="project-icon" src="img/project/cost-icon.svg" alt="Стоимость">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Стоимость</h4>
+                                        <p class="project-paragraph">14 000 рублей </p>
+                                    </div>
+                                </div>
+                                <div class="project-feedback">
+                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">О проекте</h4>
+                                        <p class="project-paragraph">
+                                            Разработка современного, эффектного и привлекающего внимание сайта путешествий по Беларуси.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide projects-slide">
+                            <img class="project-image" src="img/project/Kuba.jpg" alt="Сайт путешествий по Кубе”">
+                            <div class="project-text">
+                                <h2 class="project-title">Сайт путешествий по Кубе</h2>
+                                <div class="progect-time">
+                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Сроки</h4>
+                                        <p class="project-paragraph">4 рабочих дня</p>
+                                    </div>
+                                </div>
+                                <div class="project-cost">
+                                    <img class="project-icon" src="img/project/cost-icon.svg" alt="Стоимость">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Стоимость</h4>
+                                        <p class="project-paragraph">14 000 рублей </p>
+                                    </div>
+                                </div>
+                                <div class="project-feedback">
+                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">О проекте</h4>
+                                        <p class="project-paragraph">
+                                            Разработка яркого сайта, прекрасно адаптируемого для любого устройства.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide projects-slide">
+                            <img class="project-image" src="img/project/SpaseX.jpg" alt="Промосайт компании SpaceX">
+                            <div class="project-text">
+                                <h2 class="project-title">Промосайт компании SpaceX</h2>
+                                <div class="progect-time">
+                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Сроки</h4>
+                                        <p class="project-paragraph">4 рабочих дня</p>
+                                    </div>
+                                </div>
+                                <div class="project-cost">
+                                    <img class="project-icon" src="img/project/cost-icon.svg" alt="Стоимость">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Стоимость</h4>
+                                        <p class="project-paragraph">14 000 рублей </p>
+                                    </div>
+                                </div>
+                                <div class="project-feedback">
+                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">О проекте</h4>
+                                        <p class="project-paragraph">
+                                            Разработка современного, адаптивного промосайта для компании SpaceX.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="project-pagination"></div>
+
+                </div>
+
+
+            </div>
+        </section>
     </main>
 
     <footer class="section">
@@ -178,6 +286,7 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
 
