--- a/index.html
+++ b/index.html
@@ -581,24 +581,27 @@
                     </div>
 
                     <div class="modal modal__add hide">
-                        <div class="modal__block ">
-                            <p>Эта страница не собирает данные о Вас, но так как она расположена на github pages на неё
-                                распространяется политика конфиденциальности github. По отношению к Вам будет честно расположить здесь
-                                вот часть политики, чтобы Вы знали, какую информацию о вас собрали при посещении этой страницы:</p>
-                            <div class="modal__content text-block">                                
+                        <div class="modal__block">
+                            <div class="on-hover">
+                                <p> Эта страница не собирает данные о Вас, но так как она расположена на github pages на неё
+                                    распространяется политика конфиденциальности github. По отношению к Вам будет честно расположить здесь
+                                    вот часть политики, чтобы Вы знали, какую информацию о вас собрали при посещении этой страницы:
+                                </p>
+                            </div>
+                            <div class="modal__content text-block hidden-block">
                                 <p>
-                                        If you're accessing our Service or Website, we automatically collect the same basic information that
+                                    If you're accessing our Service or Website, we automatically collect the same basic information that
                                     most services collect, subject, where necessary, to your consent. This includes information about how
                                     you use the Service, such as the pages you view, the referring site, your IP address and session
                                     information, and the date and time of each request. This is information we collect from every visitor to
                                     the Website, whether they have an Account or not. This information may include User Personal
                                     information.<br>
-                                        We may collect certain information about your device, such as its IP address, browser or client
+                                    We may collect certain information about your device, such as its IP address, browser or client
                                     application information, language preference, operating system and application version, device type and
                                     ID, and device model and manufacturer. This information may include User Personal information.
                                 </p>
                             </div>
-                         
+
 
                             <button class="modal__close">&#10008;</button>
                         </div>
