--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <section class="answer section">
             <div class="container">
-                <h2 class="section-title wow animate__animated animate__fadeInLeft">Ответ на вопрос</h2>
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Почему Web-разработка?</h2>
                 <div class="answer-for-q wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
                     <blockquote>
                         <p> В направлении Web-разработки мне нравится то, что здесь нет предела и ограничений в развитии. Просторы знаний и
@@ -558,7 +558,7 @@
 
                         <div class="back">
 
-                            <div class="my-cv wow animate__animated animate__fadeIn" data-wow-delay="1.5s">
+                            <div class="my-cv wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
                                 <p>Мое резюме</p>
                                 <a href="https://drive.google.com/file/d/10h-ic2FkFvK1LcshsH3gWBX7uFjbW5JJ/view?usp=sharing"
                                     class="social-link" target="_blank">
@@ -573,7 +573,7 @@
                             </div>
 
                             <div class="contacts-police-form">
-                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn" data-wow-delay="1.5s">
+                                <a class="contacts-police add__ad wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
                                     Политика конфиденциальности
                                 </a>
                             </div>
@@ -594,8 +594,7 @@
                                     most services collect, subject, where necessary, to your consent. This includes information about how
                                     you use the Service, such as the pages you view, the referring site, your IP address and session
                                     information, and the date and time of each request. This is information we collect from every visitor to
-                                    the Website, whether they have an Account or not. This information may include User Personal
-                                    information.<br>
+                                    the Website, whether they have an Account or not. This information may include User Personal information.<br>
                                     We may collect certain information about your device, such as its IP address, browser or client
                                     application information, language preference, operating system and application version, device type and
                                     ID, and device model and manufacturer. This information may include User Personal information.
