--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     <span class="hero-subtitle wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">Веб-разработчик</span>
                     <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
-                        Я начинающий веб-разработчик. Занимаюсь разработкой сайтов и приложений.
+                        Я junior frontend-разработчик, web-дизайнер.
+                        Занимаюсь разработкой сайтов и приложений.
                         Студентка 4-ого курса БГУ, специальность «коммуникативный дизайн».
                         20 лет. Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу. Буду рада
                         сотрудничеству!
@@ -106,11 +107,14 @@
                         <div class="prog">
                             <p class="skill">JQuery</p>
                             <p class="skill">Bootstrap</p>
+                            <p class="skill">WordPress</p>
                             <p class="skill">SQL</p>
+                            <p class="skill">GitHub</p>
+                            
                         </div>
                         <div class="design">
                             <p class="skill">Adobe Illustrator</p>
-                            <p class="skill">Adobe Photoshope</p>
+                            <p class="skill">Adobe Photoshop</p>
                             <p class="skill">Adobe After Effects</p>
                             <p class="skill">Adobe InDesign</p>
                             <p class="skill">3Ds Max</p>
@@ -123,6 +127,22 @@
 
                 <ul class="timeline wow animate__animated animate__zoomIn" data-wow-delay="2.5s">
                     <!-- Item 1 -->
+                    <li>
+                        <div class="direction-l">
+                            <div class="flag-wrapper">
+                                <span class="hexa"></span>
+                                <span class="flag"><a href="img/WebSert-Zhidko.jpg" target="_blank">сертификат</a></span>
+                                <span class="time-wrapper"><span class="time">20.08.2020</span></span>
+                            </div>
+                            <div class="desc">Летний университет БГУ<br><strong>Курс Web-программирование</strong> <br>
+                                По итогам курса я: изучила технологии и протоколы, обеспечивающие работу глобальной сети, попробовала
+                                различные типы верстки сайтов, изучила отзывчивый веб-дизайн, использовала библиотеки для верстки. Создание
+                                приложений-клиентов. Асинхронность в JS.
+                            </div>
+                        </div>
+                    </li>
+
+                    <!-- Item 2 -->
                     <li>
                         <div class="direction-r">
                             <div class="flag-wrapper">
@@ -140,7 +160,7 @@
                         </div>
                     </li>
 
-                    <!-- Item 2 -->
+                    <!-- Item 3 -->
                     <li>
                         <div class="direction-l">
                             <div class="flag-wrapper">
@@ -156,7 +176,7 @@
                         </div>
                     </li>
 
-                    <!-- Item 3 -->
+                    <!-- Item 4 -->
                     <li>
                         <div class="direction-r">
                             <div class="flag-wrapper">
@@ -176,7 +196,7 @@
             </div>
         </section>
 
-        <section class="features section">
+        <section class="section features">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Обо мне</h2>
                 <div class="features-block wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
@@ -210,7 +230,7 @@
             </div>
         </section>
 
-        <section class="answer section">
+        <section class="section answer">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Почему Web-разработка?</h2>
                 <div class="answer-for-q wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
@@ -228,8 +248,6 @@
                     </blockquote>
                 </div>
             </div>
-        </section>
-
         </section>
 
         <section class="section projects">
@@ -844,7 +862,7 @@
 
                             <div class="my-cv wow animate__animated animate__fadeIn" data-wow-delay="1.4s">
                                 <p>Мое резюме</p>
-                                <a href="https://drive.google.com/file/d/10h-ic2FkFvK1LcshsH3gWBX7uFjbW5JJ/view?usp=sharing"
+                                <a href="https://drive.google.com/file/d/1OgPRbqrIo3WUg4OUJijYoMJXqh7TsjAE/view?usp=sharing"
                                     class="social-link" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" style=" fill: #ffffff;"
                                         enable-background="new 0 0 70 70" viewBox="0 0 70 70">
