--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         Я junior frontend-разработчик, web-дизайнер.
                         Занимаюсь разработкой сайтов и приложений.
                         Студентка 4-ого курса БГУ, специальность «коммуникативный дизайн».
-                        20 лет. Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу. Буду рада
+                        21 год. Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу. Буду рада
                         сотрудничеству!
                     </p>
                     <a class="button hero-button wow animate__animated animate__fadeInRight" data-wow-delay="0.8s" href="#yak1">
