--- a/index.html
+++ b/index.html
@@ -256,6 +256,66 @@
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper">
                         <!-- Slides -->
+                        <div class="swiper-slide projects-slide">
+
+                            <div class="project-block">
+                                <img class="project-image" src="img/project/bloger.png" alt="сайт для поиска блогеров-экспертов">
+                                <div class="block">
+                                    <h2><a class="block-link" href="https://webmart.pro/" target="_blank">Посмотреть</a>
+                                    </h2>
+                                </div>
+                            </div>
+                            <div class="project-text">
+                                <h2 class="project-title">Сайт для поиска блогеров-экспертов</h2>
+                                <!--  <div class="progect-time">
+                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Сроки</h4>
+                                        <p class="project-paragraph">2 рабочих дня</p>
+                                    </div>
+                                </div> -->
+                                <div class="project-feedback">
+                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">О проекте</h4>
+                                        <p class="project-paragraph">
+                                            Разработка современного, адаптивного сайта.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="swiper-slide  projects-slide">
+
+                            <div class="project-block">
+                                <img class="project-image" src="img/project/online-course.png" alt="Сайт курса по интернет-маркетингу">
+                                <div class="block">
+                                    <h2><a class="block-link" href="https://webmart-online.pro/" target="_blank">Посмотреть</a></h2>
+                                </div>
+                            </div>
+
+                            <div class="project-text">
+                                <h2 class="project-title">Курс по интернет-маркетингу</h2>
+                                <!-- <div class="progect-time">
+                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">Сроки</h4>
+                                         <p class="project-paragraph">2 недели</p>
+                                    </div>
+                                </div> -->
+                                <div class="project-feedback">
+                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
+                                    <div class="project-description">
+                                        <h4 class="project-subtitle">О проекте</h4>
+                                        <p class="project-paragraph">
+                                            Разработка современного, эффектного и продающего сайта курса по интернет-маркетингу.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="swiper-slide  projects-slide">
 
                             <div class="project-block">
@@ -288,37 +348,6 @@
                             </div>
                         </div>
 
-                        <div class="swiper-slide  projects-slide">
-
-                            <div class="project-block">
-                                <img class="project-image" src="img/project/Castle.jpg" alt="Сайт замков Беларуси">
-                                <div class="block">
-                                    <h2><a class="block-link" href="https://ulyanazhidko.github.io/Castles-of-Belarus/"
-                                            target="_blank">Посмотреть</a></h2>
-                                </div>
-                            </div>
-
-                            <div class="project-text">
-                                <h2 class="project-title">Сайт замков Беларуси</h2>
-                                <div class="progect-time">
-                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
-                                    <div class="project-description">
-                                        <h4 class="project-subtitle">Сроки</h4>
-                                        <p class="project-paragraph">2 рабочих дня</p>
-                                    </div>
-                                </div>
-                                <div class="project-feedback">
-                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
-                                    <div class="project-description">
-                                        <h4 class="project-subtitle">О проекте</h4>
-                                        <p class="project-paragraph">
-                                            Разработка современного, эффектного и привлекающего внимание сайта путешествий по Беларуси.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
                         <div class="swiper-slide projects-slide">
 
                             <div class="project-block">
@@ -344,36 +373,6 @@
                                         <h4 class="project-subtitle">О проекте</h4>
                                         <p class="project-paragraph">
                                             Разработка яркого сайта, прекрасно адаптируемого для любого устройства.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide projects-slide">
-
-                            <div class="project-block">
-                                <img class="project-image" src="img/project/SpaseX.jpg" alt="Промосайт компании SpaceX">
-                                <div class="block">
-                                    <h2><a class="block-link" href="https://ulyanazhidko.github.io/SpaceX/" target="_blank">Посмотреть</a>
-                                    </h2>
-                                </div>
-                            </div>
-                            <div class="project-text">
-                                <h2 class="project-title">Промосайт компании SpaceX</h2>
-                                <div class="progect-time">
-                                    <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
-                                    <div class="project-description">
-                                        <h4 class="project-subtitle">Сроки</h4>
-                                        <p class="project-paragraph">2 рабочих дня</p>
-                                    </div>
-                                </div>
-                                <div class="project-feedback">
-                                    <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
-                                    <div class="project-description">
-                                        <h4 class="project-subtitle">О проекте</h4>
-                                        <p class="project-paragraph">
-                                            Разработка современного, адаптивного промосайта с использованием эффекта параллакса.
                                         </p>
                                     </div>
                                 </div>
@@ -414,28 +413,28 @@
                         <div class="swiper-slide  projects-slide">
 
                             <div class="project-block">
-                                <img class="project-image" src="img/project/BURGER-QUIZ.png" alt="BURGER-QUIZ">
+                                <img class="project-image" src="img/project/emo.png" alt="Курс для мам">
                                 <div class="block">
-                                    <h2><a class="block-link" href="https://ulyanazhidko.github.io/Burger/" target="_blank">Посмотреть</a>
+                                    <h2><a class="block-link" href="https://psyexpert.pro/emotions.html" target="_blank">Посмотреть</a>
                                     </h2>
                                 </div>
                             </div>
 
                             <div class="project-text">
-                                <h2 class="project-title">BURGER-QUIZ</h2>
-                                <div class="progect-time">
+                                <h2 class="project-title">Сайт курса для мам</h2>
+                                <!-- <div class="progect-time">
                                     <img class="project-icon" src="img/project/time-icon.svg" alt="Срок">
                                     <div class="project-description">
                                         <h4 class="project-subtitle">Сроки</h4>
                                         <p class="project-paragraph">3 рабочих дня</p>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="project-feedback">
                                     <img class="project-icon" src="img/project/feedback-icon.svg" alt="О проекте">
                                     <div class="project-description">
                                         <h4 class="project-subtitle">О проекте</h4>
                                         <p class="project-paragraph">
-                                            Разработка опросника по сбору вкусовых предпочтений клиента для ресторанов быстрого питания.
+                                            Разработка адаптивного, продающего сайта.
                                         </p>
                                     </div>
                                 </div>
@@ -637,7 +636,7 @@
                             </div>
                         </div>
                     </a>
-            
+
                     <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
                         data-fancybox="images">
                         <img class="card-img" src="img/photo/Bauhaus.jpg" alt="image">
@@ -735,8 +734,8 @@
                             <div class="card-heading">
                                 <h3 class="card-title">Дизайн сайта</h3>
                             </div> -->
-                            <!--Карточкa инфо-->
-                         <!--    <div class="card-info">
+                    <!--Карточкa инфо-->
+                    <!--    <div class="card-info">
                                 <div class="category">
                                     <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
                                     <p class="project-paragraph about-box-text">Adobe Illustrator</p>
