--- a/index.html
+++ b/index.html
@@ -178,6 +178,33 @@
             </div>
         </section>
 
+        <section class="section answer">
+            <div class="container">
+                <h2 class="section-title wow animate__animated animate__fadeInLeft">Опыт работы</h2>
+                <div class="answer-for-q wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
+                    <blockquote>
+                        <p>
+                            <b>Junior Frontend Developer</b>
+                        </p>
+                        <p><a href="https://webmart.by/" target="_blank" style="color: #FFBB01;text-decoration: none;">Webmart Group</a></p>
+                        <span>Полный рабочий день</span>
+                        <span>февр. 2021 г. – настоящее время(5 мес.)</span>
+
+                        <ul>
+                            <li>Разработка веб-сайтов с нуля;</li>
+                            <li>Верстка по макетам (figma);</li>
+                            <li>Правка существующих страниц сайтов;</li>
+                            <li>Работа с системой управления сайтом MODx(Evo) и WordPress;</li>
+                            <li>Проектирование пользовательских интерфейсов;</li>
+                            <li>Разработка визуальных материалов;</li>
+                            <li>Адаптивная, кроссбраузерная верстка с использованием Bootstrap, Materialize, jQuery и без.</li>
+                        </ul>
+                        </p>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+
         <section class="section features">
             <div class="container">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Обо мне</h2>
