--- a/index.html
+++ b/index.html
@@ -562,7 +562,6 @@
                         </div>
 
                     </div>
-                    <!-- If we need pagination -->
                     <div class="project-pagination"></div>
 
                 </div>
@@ -601,7 +600,7 @@
                         </div>
                     </div>
 
-                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.25s">
                         <div class="card-project-block">
                             <img class="card-project-image" src="img/photo/bvlgari.png" alt="фотоплакаты">
 
@@ -628,7 +627,33 @@
                         </div>
                     </div>
 
-                    <a href="img/photo/жук.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
+                    <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
+                        <div class="card-project-block">
+                            <img class="card-project-image" src="img/photo/ihana.png" alt="приложение">
+
+                            <div class="card-text">
+
+                                <div class="card-heading">
+                                    <h3 class="card-title">Дизайн и прототипирование приложения</h3>
+                                </div>
+                                <!--Карточкa инфо-->
+                                <div class="card-info">
+                                    <div class="category">
+                                        <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
+                                        <p class="project-paragraph about-box-text">Figma</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-block card-block-poster">
+                                <h2><a class="block-link"
+                                        href="https://www.figma.com/proto/27iwtDwhwgwagDixf2kDhN/Ihana?node-id=1%3A83&scaling=scale-down&page-id=0%3A1"
+                                        target="_blank">Посмотреть</a>
+                                </h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a href="img/photo/жук.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.35s"
                         data-fancybox="images">
                         <img class="card-img" src="img/photo/жук.jpg" alt="image">
                         <div class="card-text">
@@ -664,7 +689,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
+                    <a href="img/photo/Bauhaus.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.45s"
                         data-fancybox="images">
                         <img class="card-img" src="img/photo/Bauhaus.jpg" alt="image">
                         <div class="card-text">
@@ -682,7 +707,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/Агрессия.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
+                    <a href="img/photo/Агрессия.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s"
                         data-fancybox="images">
                         <img class="card-img" src="img/photo/Агрессия.jpg" alt="image">
                         <div class="card-text">
@@ -699,7 +724,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/3.png" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
+                    <a href="img/photo/3.png" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.55s"
                         data-fancybox="images">
                         <img class="card-img" src="img/photo/3.png" alt="image">
                         <div class="card-text">
@@ -737,39 +762,7 @@
                         </div>
                     </a>
 
-                    <a href="img/photo/грузоперевозки.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
-                        data-fancybox="images">
-                        <img class="card-img" src="img/photo/грузоперевозки.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Дизайн сайта</h3>
-                            </div>
-                            <!--Карточкa инфо-->
-                            <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-
-                    <!-- <a href="img/photo/кухня.jpg" class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
-                        data-fancybox="images">
-                        <img class="card-img" src="img/photo/кухня.jpg" alt="image">
-                        <div class="card-text">
-                            <div class="card-heading">
-                                <h3 class="card-title">Дизайн сайта</h3>
-                            </div> -->
-                    <!--Карточкa инфо-->
-                    <!--    <div class="card-info">
-                                <div class="category">
-                                    <h4 class="project-subtitle card-susubtitle">Инструменты:</h4>
-                                    <p class="project-paragraph about-box-text">Adobe Illustrator</p>
-                                </div>
-                            </div>
-                        </div>
-                    </a> -->
+                   
 
                 </div>
 
