--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
                 <div class="hero-text">
                     <span class="hero-subtitle wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">Веб-разработчик</span>
-                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко
-                    </h1>
+                    <h1 class="hero-title wow animate__animated animate__fadeInRight" data-wow-delay="0.4s">Ульяна Жидко</h1>
                     <p class="hero-discription wow animate__animated animate__fadeInRight" data-wow-delay="0.6s">
                         Я junior frontend-разработчик, web-дизайнер. Занимаюсь разработкой сайтов и приложений. Студентка 5-ого курса БГУ, специальность «коммуникативный дизайн». 21 год. Я открыта для интересных проектов и новых возможностей, всегда стараюсь принести пользу.
                         Буду рада сотрудничеству!
@@ -179,9 +178,13 @@
                             <p>
                                 <b>Junior Frontend Developer</b>
                             </p>
-                            <p><a href="https://webmart.by/" target="_blank" style="color: #FFBB01;text-decoration: none;">Webmart Group</a></p>
+                            <p>
+                                <a href="https://webmart.by/" target="_blank" style="color: #FFBB01;text-decoration: none;">
+                                    Webmart Group
+                                </a>
+                            </p>
                             <span>Полный рабочий день</span>
-                            <span>февр. 2021 г. – настоящее время(6 мес.)</span>
+                            <span>февр. 2021 г. – настоящее время(7 мес.)</span>
 
                             <ul>
                                 <li>Разработка веб-сайтов с нуля;</li>
