fix:project- overflow

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </section>
 
         <section class="section projects">
-            <div class="container">
+            <div class="container" style="overflow: hidden;">
                 <h2 class="section-title wow animate__animated animate__fadeInLeft">Последние проекты</h2>
 
                 <div class="swiper-container projects-slider wow animate__animated animate__zoomIn" data-wow-delay="0.3s">
